# wallet-watcher-cli

./: .gitignore  README.md  cmd-examples.md  pyproject.toml  run.sh  view.sh
src/wallet_watcher/: _types.py  adapter.py  cli.py  constants.py  core.py  render.py
tests/: test_adapter.py  test_core.py
