[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wallet-watcher-cli"
version = "0.1.0"
description = "A lightweight command-line tool to manage personal expenses"
authors = [{ name = "Joshua Emralino", email = "jemralino@student.sdccd.edu" }]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = []

[project.scripts]
mycli = "wallet_watcher.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
